[metadata]
name = monomedia
version = 0.0.1
author = Lukas Schreiner
author_email = dev@lschreiner.de
description = Package for playing media of public or non-public broadcasts in a choosen quality.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
url = https://github.com/monofox/Scripte-R-Mediatheken
project_urls =
    Bug Tracker = https://github.com/monofox/Scripte-R-Mediatheken/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    certifi>=2019.11.28
    chardet>=3.0.4
    idna>=2.9
    lxml>=4.5.0
    ply>=3.11
    pytz>=2019.3
    requests>=2.23.0
    slimit>=0.8.1
    urllib3>=1.25.8
    xmltodict>=0.12.0
    python-mpv-jsonipc>=1.1.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    monomedia = monomedia.frontend.cli:main
